src/parser/snapshots/monkey_language_server__parser__test__fn_expr_unhappy_8.snap
---
source: src/parser/test.rs
description: "fn(1+) {}"
expression: result
---
[
    Function {
        token: Token(Function, "fn", (0,0)->(0,2)),
        params: Ok(
            [
                Err(
                    Err(UnexpectedToken("SyntaxError: Unexpected '<int>'."), (0,3)->(0,4)),
                ),
            ],
        ),
        body: Ok(
            Block {
                token: Token(LBrace, "{", (0,7)->(0,8)),
                statements: [],
                start: (0,7),
                end: (0,8),
            },
        ),
    },
]

===================================

fn(1+) {}
   ^ [Error] SyntaxError: Unexpected '<int>'.
